Bug 789960 - Fix crash in nsLayoutUtils::HasAnimationsForCompositor r=roc